# public/docs/openapi.yaml
@@ -85,6 +85,167 @@ paths:
                 - email
                 - password
       security: []
+  /api/uploadImage:
+    post:
+      summary: 'POST - Upload Image'
+      operationId: pOSTUploadImage
+      description: 'In order to use this api you must get a valid username and password provided by our team.'
+      parameters:
+        -
+          in: header
+          name: Authorization
+          description: ''
+          example: 'Bearer {YOUR_AUTH_KEY}'
+          schema:
+            type: string
+        -
+          in: header
+          name: Content-Type
+          description: ''
+          example: multipart/form-data
+          schema:
+            type: string
+        -
+          in: header
+          name: Accept
+          description: ''
+          example: application/json
+          schema:
+            type: string
+      responses:
+        200:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  success: true
+                  message: 'Image created'
+                  data:
+                    name: 642931ab0cd4e.jpg
+                    image: 'http://images-repo.test/imagenes/productos/642931ab0cd4e.jpg'
+                    folder: productos
+                    updated_at: '2023-04-02T07:41:31.000000Z'
+                    created_at: '2023-04-02T07:41:31.000000Z'
+                    id: 71
+                properties:
+                  success:
+                    type: boolean
+                    example: true
+                  message:
+                    type: string
+                    example: 'Image created'
+                  data:
+                    type: object
+                    properties:
+                      name:
+                        type: string
+                        example: 642931ab0cd4e.jpg
+                      image:
+                        type: string
+                        example: 'http://images-repo.test/imagenes/productos/642931ab0cd4e.jpg'
+                      folder:
+                        type: string
+                        example: productos
+                      updated_at:
+                        type: string
+                        example: '2023-04-02T07:41:31.000000Z'
+                      created_at:
+                        type: string
+                        example: '2023-04-02T07:41:31.000000Z'
+                      id:
+                        type: integer
+                        example: 71
+      tags:
+        - Endpoints
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                folder:
+                  type: string
+                  description: 'Your folders name.'
+                  example: productos
+                image:
+                  type: string
+                  format: binary
+                  description: 'Your file.'
+              required:
+                - folder
+                - image
+  /api/getFileByID:
+    post:
+      summary: 'POST - GET File by Image URL'
+      operationId: pOSTGETFileByImageURL
+      description: 'In order to use this api you must get a valid username and password provided by our team.'
+      parameters:
+        -
+          in: query
+          name: imageurl
+          description: 'file Your file.'
+          example: 'http://huels.com/numquam-quis-aut-aut-amet-velit-et.html'
+          required: true
+          schema:
+            type: string
+            description: 'file Your file.'
+            example: 'http://huels.com/numquam-quis-aut-aut-amet-velit-et.html'
+        -
+          in: header
+          name: Authorization
+          description: ''
+          example: 'Bearer {YOUR_AUTH_KEY}'
+          schema:
+            type: string
+        -
+          in: header
+          name: Content-Type
+          description: ''
+          example: application/json
+          schema:
+            type: string
+        -
+          in: header
+          name: Accept
+          description: ''
+          example: application/json
+          schema:
+            type: string
+      responses:
+        200:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  success: false
+                  message: 'La imagen no existe en la base de datos.'
+                properties:
+                  success:
+                    type: boolean
+                    example: false
+                  message:
+                    type: string
+                    example: 'La imagen no existe en la base de datos.'
+      tags:
+        - Endpoints
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                image_url:
+                  type: string
+                  description: ''
+                  example: odio
+              required:
+                - image_url
   /api/auth/user:
     post:
       summary: "GET - Get logged in user's information"
@@ -163,66 +324,6 @@ paths:
                     example: Unauthenticated.
       tags:
         - Endpoints
-  /api/uploadImage:
-    post:
-      summary: 'POST - Upload Image'
-      operationId: pOSTUploadImage
-      description: 'In order to use this api you must get a valid username and password provided by our team.'
-      parameters:
-        -
-          in: header
-          name: Authorization
-          description: ''
-          example: 'Bearer {YOUR_AUTH_KEY}'
-          schema:
-            type: string
-        -
-          in: header
-          name: Content-Type
-          description: ''
-          example: multipart/form-data
-          schema:
-            type: string
-        -
-          in: header
-          name: Accept
-          description: ''
-          example: application/json
-          schema:
-            type: string
-      responses:
-        401:
-          description: ''
-          content:
-            application/json:
-              schema:
-                type: object
-                example:
-                  message: Unauthenticated.
-                properties:
-                  message:
-                    type: string
-                    example: Unauthenticated.
-      tags:
-        - Endpoints
-      requestBody:
-        required: true
-        content:
-          multipart/form-data:
-            schema:
-              type: object
-              properties:
-                image:
-                  type: string
-                  format: binary
-                  description: 'Your file.'
-                folder:
-                  type: string
-                  description: 'Your folders name.'
-                  example: productos
-              required:
-                - image
-                - folder
 tags:
   -
     name: Endpoints
